--- a/jkuwad_template.ipynb
+++ b/jkuwad_template.ipynb
@@ -654,7 +654,47 @@
       "\tMetrics - ['frags: 0', 'hits: 15', 'damage_taken: -3', 'movement: 19', 'ammo_efficiency: 4', 'survival: 42', 'health_pickup: 1']\n",
       "20:07:21 | Episode: 26 | Running quick evaluation...\n",
       "20:07:42 | Episode: 27 | Steps done: 40500 | Gathering rollout (currently 20000)\n",
-      "20:07:57 | Episode: 27 | Training for 50 epochs\n"
+      "20:07:57 | Episode: 27 | Training for 50 epochs\n",
+      "20:07:58 | Episode: 27 | Updating target network...\n",
+      "20:07:58 | Episode: 27 | Rewards:\n",
+      "\tReward: [80. 63.] | Avg Reward: 79.0 | Loss: 0.0382 | ε: 0.869 | LR: 3.62e-05\n",
+      "\tMetrics - ['frags: 0', 'hits: 5', 'damage_taken: -1', 'movement: 20', 'ammo_efficiency: 3', 'survival: 42', 'health_pickup: 1']\n",
+      "20:07:58 | Episode: 27 | Running quick evaluation...\n",
+      "20:08:19 | Episode: 28 | Steps done: 42000 | Gathering rollout (currently 20000)\n",
+      "20:08:34 | Episode: 28 | Training for 50 epochs\n",
+      "20:08:35 | Episode: 28 | Updating target network...\n",
+      "20:08:35 | Episode: 28 | Rewards:\n",
+      "\tReward: [93. 55.] | Avg Reward: 79.0 | Loss: 0.0641 | ε: 0.865 | LR: 3.31e-05\n",
+      "\tMetrics - ['frags: 0', 'hits: 10', 'damage_taken: -2', 'movement: 18', 'ammo_efficiency: 4', 'survival: 42', 'health_pickup: 1']\n",
+      "20:08:35 | Episode: 28 | Running quick evaluation...\n",
+      "20:08:57 | Episode: 29 | Steps done: 43500 | Gathering rollout (currently 20000)\n",
+      "20:09:11 | Episode: 29 | Training for 50 epochs\n",
+      "20:09:13 | Episode: 29 | Updating target network...\n",
+      "20:09:13 | Episode: 29 | Rewards:\n",
+      "\tReward: [169.  46.] | Avg Reward: 81.0 | Loss: 0.2265 | ε: 0.860 | LR: 3.00e-05\n",
+      "\tMetrics - ['frags: 0', 'hits: 45', 'damage_taken: -9', 'movement: 20', 'ammo_efficiency: 7', 'survival: 42', 'health_pickup: 1']\n",
+      "20:09:13 | Episode: 29 | Running quick evaluation...\n",
+      "20:09:34 | Episode: 30 | Steps done: 45000 | Gathering rollout (currently 20000)\n",
+      "20:09:48 | Episode: 30 | Training for 50 epochs\n",
+      "20:09:50 | Episode: 30 | Updating target network...\n",
+      "20:09:50 | Episode: 30 | Rewards:\n",
+      "\tReward: [104.  57.] | Avg Reward: 80.0 | Loss: 0.6573 | ε: 0.856 | LR: 2.69e-05\n",
+      "\tMetrics - ['frags: 0', 'hits: 15', 'damage_taken: -3', 'movement: 19', 'ammo_efficiency: 4', 'survival: 42', 'health_pickup: 1']\n",
+      "20:09:50 | Episode: 30 | Running quick evaluation...\n",
+      "20:10:12 | Episode: 31 | Steps done: 46500 | Gathering rollout (currently 20000)\n",
+      "20:10:26 | Episode: 31 | Training for 50 epochs\n",
+      "20:10:28 | Episode: 31 | Updating target network...\n",
+      "20:10:28 | Episode: 31 | Rewards:\n",
+      "\tReward: [67. 61.] | Avg Reward: 80.0 | Loss: 0.2471 | ε: 0.852 | LR: 2.38e-05\n",
+      "\tMetrics - ['frags: 0', 'hits: 0', 'damage_taken: 0', 'movement: 17', 'ammo_efficiency: 3', 'survival: 42', 'health_pickup: 1']\n",
+      "20:10:28 | Episode: 31 | Running quick evaluation...\n",
+      "20:10:50 | Episode: 32 | Steps done: 48000 | Gathering rollout (currently 20000)\n",
+      "20:11:05 | Episode: 32 | Training for 50 epochs\n",
+      "20:11:06 | Episode: 32 | Updating target network...\n",
+      "20:11:06 | Episode: 32 | Rewards:\n",
+      "\tReward: [68. 60.] | Avg Reward: 80.0 | Loss: 0.0353 | ε: 0.848 | LR: 2.09e-05\n",
+      "\tMetrics - ['frags: 0', 'hits: 0', 'damage_taken: 0', 'movement: 17', 'ammo_efficiency: 3', 'survival: 42', 'health_pickup: 1']\n",
+      "20:11:06 | Episode: 32 | Running quick evaluation...\n"
      ]
     }
    ],
