tournament large push

--- a/main_efficient_dm.ipynb
+++ b/main_efficient_dm.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "nmNDlnmfzP62"
    },
@@ -167,7 +167,7 @@
     "    # NOTE: \"algo_type\" defaults to POLICY in evaluation script!\n",
     "    \"algo_type\": \"QVALUE\",  # OPTIONAL, change to POLICY if using policy-based (eg PPO)\n",
     "    \"n_stack_frames\": 1, #4, # 1 # Temporal information\n",
-    "    \"extra_state\": [\"depth\"], #[\"labels\"],#, \"automap\"], #[\"depth\", \"labels\", \"automap\"],\n",
+    "    \"extra_state\": [\"depth\", \"labels\"], #[\"labels\"],#, \"automap\"], #[\"depth\", \"labels\", \"automap\"],\n",
     "    \"hud\": \"none\",\n",
     "    \"crosshair\": True,\n",
     "    \"screen_format\": 8 if USE_GRAYSCALE else 0,\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -242,7 +242,7 @@
     "        num_players=NUM_PLAYERS, # 4 is max\n",
     "        num_bots=NUM_BOTS,\n",
     "        bot_skill=1, # Increased difficulty\n",
-    "        doom_map=\"ROOM\",  # ROOM = NOTE simple, small map; other options: TRNM, TRNMBIG\n",
+    "        doom_map=\"TRNM\",  # ROOM = NOTE simple, small map; other options: TRNM, TRNMBIG\n",
     "        extra_state=PLAYER_CONFIG[\"extra_state\"],  # see info about states at the beginning of \"Environment configuration\" above\n",
     "        episode_timeout=EPISODE_TIMEOUT,\n",
     "        n_stack_frames=PLAYER_CONFIG[\"n_stack_frames\"],\n",
@@ -555,63 +555,7 @@
       "\tMetrics - ['frags: 0', 'hits: 90', 'damage_taken: -5', 'movement: 0', 'ammo_efficiency: 12', 'survival: -1174', 'health_pickup: 1']\n",
       "\tActions - Noop: 225, Move Forward: 882, Attack: 1142, Move Left: 429, Move Right: 484, Turn Left: 520, Turn Right: 567, Jump: 251\n",
       "03:30:06 | Episode: 2 | Running quick evaluation...\n",
-      "03:30:09 | Episode: 3 | Steps done: 4500 | Gathering rollout (currently 13491)\n",
-      "03:30:23 | Episode: 3 | Training for 20 epochs\n",
-      "03:30:24 | Episode: 3 | Updating target network...\n",
-      "03:30:24 | Episode: 3 | Rewards:\n",
-      "\tReward: [-3033.   -20.   -15.] | Avg Reward: -1080.0 | Loss: 3.6015 | ε: 0.992 | LR: 9.84e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 141', 'damage_taken: -6', 'movement: 0', 'ammo_efficiency: 16', 'survival: -1175', 'health_pickup: 1']\n",
-      "\tActions - Noop: 213, Move Forward: 899, Attack: 1128, Move Left: 455, Move Right: 494, Turn Left: 547, Turn Right: 525, Jump: 239\n",
-      "03:30:24 | Episode: 3 | Running quick evaluation...\n",
-      "03:30:27 | Episode: 4 | Steps done: 6000 | Gathering rollout (currently 15000)\n",
-      "03:30:40 | Episode: 4 | Training for 20 epochs\n",
-      "03:30:42 | Episode: 4 | Updating target network...\n",
-      "03:30:42 | Episode: 4 | Rewards:\n",
-      "\tReward: [-3359.   -16.   159.] | Avg Reward: -1079.0 | Loss: 3.5805 | ε: 0.990 | LR: 9.76e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 93', 'damage_taken: -5', 'movement: 0', 'ammo_efficiency: 12', 'survival: -1173', 'health_pickup: 1']\n",
-      "\tActions - Noop: 231, Move Forward: 922, Attack: 1110, Move Left: 437, Move Right: 461, Turn Left: 547, Turn Right: 554, Jump: 238\n",
-      "03:30:42 | Episode: 4 | Running quick evaluation...\n",
-      "03:30:44 | Episode: 5 | Steps done: 7500 | Gathering rollout (currently 15000)\n",
-      "03:30:58 | Episode: 5 | Training for 20 epochs\n",
-      "03:30:59 | Episode: 5 | Updating target network...\n",
-      "03:30:59 | Episode: 5 | Rewards:\n",
-      "\tReward: [-3449.    -5.    -8.] | Avg Reward: -1091.0 | Loss: 3.4111 | ε: 0.988 | LR: 9.65e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 15', 'damage_taken: 0', 'movement: 0', 'ammo_efficiency: 4', 'survival: -1173', 'health_pickup: 1']\n",
-      "\tActions - Noop: 243, Move Forward: 892, Attack: 1140, Move Left: 438, Move Right: 447, Turn Left: 544, Turn Right: 550, Jump: 246\n",
-      "03:30:59 | Episode: 5 | Running quick evaluation...\n",
-      "03:31:02 | Episode: 6 | Steps done: 9000 | Gathering rollout (currently 15000)\n",
-      "03:31:16 | Episode: 6 | Training for 20 epochs\n",
-      "03:31:17 | Episode: 6 | Updating target network...\n",
-      "03:31:17 | Episode: 6 | Rewards:\n",
-      "\tReward: [-3129.   -17.   -14.] | Avg Reward: -1086.0 | Loss: 3.4474 | ε: 0.986 | LR: 9.52e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 111', 'damage_taken: -5', 'movement: 0', 'ammo_efficiency: 14', 'survival: -1174', 'health_pickup: 1']\n",
-      "\tActions - Noop: 247, Move Forward: 893, Attack: 1045, Move Left: 472, Move Right: 498, Turn Left: 554, Turn Right: 548, Jump: 243\n",
-      "03:31:17 | Episode: 6 | Running quick evaluation...\n",
-      "03:31:20 | Episode: 7 | Steps done: 10500 | Gathering rollout (currently 15000)\n",
-      "03:31:34 | Episode: 7 | Training for 20 epochs\n",
-      "03:31:36 | Episode: 7 | Updating target network...\n",
-      "03:31:36 | Episode: 7 | Rewards:\n",
-      "\tReward: [-3373.   -20.   230.] | Avg Reward: -1082.0 | Loss: 4.0141 | ε: 0.984 | LR: 9.38e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 111', 'damage_taken: -4', 'movement: 0', 'ammo_efficiency: 12', 'survival: -1174', 'health_pickup: 1']\n",
-      "\tActions - Noop: 230, Move Forward: 942, Attack: 1140, Move Left: 403, Move Right: 498, Turn Left: 523, Turn Right: 526, Jump: 238\n",
-      "03:31:36 | Episode: 7 | Running quick evaluation...\n",
-      "03:31:38 | Episode: 8 | Steps done: 12000 | Gathering rollout (currently 15000)\n",
-      "03:31:53 | Episode: 8 | Training for 20 epochs\n",
-      "03:31:54 | Episode: 8 | Updating target network...\n",
-      "03:31:54 | Episode: 8 | Rewards:\n",
-      "\tReward: [-3277.    -5.   -16.] | Avg Reward: -1084.0 | Loss: 3.4979 | ε: 0.982 | LR: 9.22e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 68', 'damage_taken: -2', 'movement: 0', 'ammo_efficiency: 8', 'survival: -1174', 'health_pickup: 1']\n",
-      "\tActions - Noop: 243, Move Forward: 919, Attack: 1096, Move Left: 428, Move Right: 480, Turn Left: 547, Turn Right: 544, Jump: 243\n",
-      "03:31:54 | Episode: 8 | Running quick evaluation...\n",
-      "03:31:57 | Episode: 9 | Steps done: 13500 | Gathering rollout (currently 15000)\n",
-      "03:32:11 | Episode: 9 | Training for 20 epochs\n",
-      "03:32:12 | Episode: 9 | Updating target network...\n",
-      "03:32:12 | Episode: 9 | Rewards:\n",
-      "\tReward: [-3422.    -5.    -9.] | Avg Reward: -1090.0 | Loss: 3.4376 | ε: 0.980 | LR: 9.05e-06\n",
-      "\tMetrics - ['frags: 0', 'hits: 23', 'damage_taken: -1', 'movement: 0', 'ammo_efficiency: 4', 'survival: -1173', 'health_pickup: 1']\n",
-      "\tActions - Noop: 219, Move Forward: 925, Attack: 1103, Move Left: 446, Move Right: 542, Turn Left: 494, Turn Right: 522, Jump: 249\n",
-      "03:32:12 | Episode: 9 | Running quick evaluation...\n",
-      "03:32:14 | Episode: 10 | Steps done: 15000 | Gathering rollout (currently 15000)\n"
+      "03:30:09 | Episode: 3 | Steps done: 4500 | Gathering rollout (currently 13491)\n"
      ]
     }
    ],
