adding colab support on main file

--- a/main_efficient_dm.ipynb
+++ b/main_efficient_dm.ipynb
@@ -32,22 +32,29 @@
    "outputs": [],
    "source": [
     "# Clone repo\n",
-    "#!git clone https://$token@github.com/gerkone/jku.wad.git\n",
-    "#%cd jku.wad"
+    "#from google.colab import drive\n",
+    "#drive.mount('/content/drive')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "oYTcQU_TiP06",
-    "outputId": "9ca3b3f4-26b2-4c80-8aa2-9201e1841cdc"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#%cd /content/drive/MyDrive/Colab\\ Notebooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone repo\n",
+    "#!git clone https://github.com/albortino/doom-drl-challenge.git\n",
+    "#%cd doom-drl-challenge\n",
+    "\n",
     "# Install the dependencies\n",
     "#!pip install torch numpy matplotlib vizdoom portpicker gym onnx"
    ]
