fixes and adaptions

--- a/main_efficient_dm.ipynb
+++ b/main_efficient_dm.ipynb
@@ -1712,7 +1712,7 @@
     "            eval_obs = env.reset() # List of obs\n",
     "        \n",
     "        # Return the tensors for analysis\n",
-    "        analyze_model_tensors(episode, eval_obs, model)\n",
+    "        analyze_model_tensors(activation_logger, episode, eval_obs, model, split_dims=obs_states.get_dims(return_dict=False))\n",
     "\n",
     "        # Evaluate every EVALUTATION EVERY periods to improve the speed\n",
     "        if episode > 0 and episode % EVALUATION_EVERY == 0:\n",
